# GenPP

./: .gitignore  .pre-commit-config.yaml  launch_perm_imp.sh  pyproject.toml  readme.md
docs/: BUG_ANALYSIS_CHEN_ENGRESSION.md  spatial_norm_bugs.md
src/genpp/: __init__.py  test.ipynb  test_config.ipynb  train.py  train_chen.py  train_drn.py  train_emos.py
src/genpp/configs/: README.md  __init__.py  autoencoder.yaml  base_autoencoder.yaml  base_chen.yaml  base_chen_spatial.yaml  base_classifierencoder.yaml  base_drn.yaml  base_emos.yaml  base_engression.yaml  base_engression_spatial.yaml  base_fm_unet.yaml  base_fm_uvit.yaml  base_fm_uvit_cfg.yaml  base_fmunet.yaml  base_fmuvit.yaml  config.yaml
src/genpp/configs/data/: README.md  ae_dataset.yaml  classification_dataset.yaml  icon_cut.yaml  icon_full.yaml  icon_full_minmax.yaml  icon_full_pad_x.yaml  icon_full_pad_xy.yaml  icon_full_spatial.yaml  icon_full_spatial_minmax.yaml  wb2_cut.yaml  wb2_full.yaml  wb2_full_minmax.yaml  wb2_full_pad_x.yaml  wb2_full_pad_xy.yaml  weatherbench2.yaml  weatherbench2_cut.yaml  weatherbench2_cut_fast.yaml  weatherbench2_full.yaml  weatherbench2_full_fast.yaml
src/genpp/configs/hydra/: standard.yaml
src/genpp/configs/logger/: csv.yaml  default.yaml  none.yaml  wandb.yaml
src/genpp/configs/model/: autoencoder.yaml  base_chen.yaml  base_engression.yaml  base_fm_unet.yaml  base_fm_uvit.yaml  base_fm_uvit_cfg.yaml  classifierencoder.yaml  cnn_chen.yaml  cnn_chen_direct.yaml  cnn_chen_noise.yaml  cnn_chen_spatial.yaml  cnn_engression_direct.yaml  cnn_engression_noise.yaml  drn.yaml  emos.yaml  engression.yaml  engression_spatial.yaml  fc_chen.yaml  fm_cnn.yaml  fm_unet.yaml  fm_unet_direct.yaml  fm_unet_noise.yaml  fm_uvit.yaml  fm_uvit_cfg_direct.yaml  fm_uvit_cfg_noise.yaml  fm_uvit_direct.yaml  fm_uvit_noise.yaml
src/genpp/configs/preprocess/: standard.yaml
src/genpp/configs/splits/: standard.yaml
src/genpp/configs/trainer/: debug.yaml  debug_gpu.yaml  default.yaml  fast.yaml  fit_scale_td.yaml  lr_finder.yaml  overfit.yaml
src/genpp/data/: __init__.py  data.py  dataset.py  download.py  explore.ipynb  fast_dataset_simple.py  flat_and_aggr.py  test.ipynb  utils.py  zarr.py  zarr_dataset.py
src/genpp/data/icon/: PARALLEL_PROCESSING.md  __init__.py  data  dataset.py  flat_and_aggr.py  launch_tensor_jobs.sh  process_tensors.py  qsub.txt  submit_fc_tensors.sh  submit_rea_tensors.sh
src/genpp/data/weatherbench2/: __init__.py  download.py  fast_dataset_simple.py  flat_and_aggr.py  zarr_dataset.py
src/genpp/eval/: PLAN_permutation_importance.md  __init__.py  base_scores.ipynb  cfg_predict_eval.py  cgm_predict.ipynb  cgm_predict.py  cgm_predict_eval.py  copulas.ipynb  copulas_eval.py  corpulas.ipynb  fm_predict.ipynb  fm_predict.py  icon_copulas_eval.py  icon_copulas_predict.py  icon_copulas_score.py  icon_predict_eval.py  launch_permutation_importance_drn.py  permutation_importance.py  permutation_importance_drn.py  plot_forecasts_web.py  plot_scores.ipynb  utils.py
src/genpp/eval/FID/: __init__.py  autoencoder.py  autoencoder_dev.ipynb  encoder.py  vis_fid.ipynb
src/genpp/eval/icon/: __init__.py  best_models.py  build_baseline_test_predictions.py  icon_cgm_predict_eval.py  icon_copulas_eval.py  icon_raw_ensemble.py  icon_raw_wandb_upload.py  raw_ensemble.py  raw_wandb_upload.py
src/genpp/eval/spectral/: test.ipynb
src/genpp/eval/wb2/: __init__.py  best_encoders.py  best_models.py  cfg_predict_eval.py  cgm_predict_eval.py  copulas.ipynb  copulas_eval.py  plot_forecasts_web.py
src/genpp/explore/: eval.ipynb
src/genpp/models/: base_module.py  callbacks.py  chen.py  distributions.py  drn.py  ecc.py  emos.py  layers.py  loss.py  meta.py  td_regression.ipynb  test.ipynb  utils.py
src/genpp/models/cgm/: __init__.py  chen.py
src/genpp/models/distributionalRegression/: __init__.py  distributions.py  drn.py  emos.py  meta.py
src/genpp/models/engression/: __init__.py  base.py  cnn.py
src/genpp/models/fm/: base.py  fm_cnn.py  fm_test.ipynb  fm_uvit.py  helpers.py
src/genpp/models/notebooks/: kernel_loss.ipynb  td_regression.ipynb  test.ipynb
src/genpp/models/scores/: __init__.py  base.py  crps.py  energy.py  rbf.py  variogram.py
src/genpp/plots/: 00scores_table.ipynb  00scores_table_icon.ipynb  01data.ipynb  02plot_scores.ipynb  03plot_sample_icon.py  03plot_samples.ipynb  04plot_cfg_scores.ipynb  05plot_n_samples.ipynb  06plot_spatial_errors_icon.py  06plot_spatial_errors_wb2.ipynb  07plot_feature_importance.ipynb  08plot_histograms.ipynb  08plot_histograms_icon.py  09icon_errors.ipynb  __init__.py
src/genpp/plots/launch/: 08launch.sh
src/genpp/preproc/: flat_and_aggr.py  preprocessors.py  transforms.py  utils.py
src/genpp/scripts/: debug_variable_scores.py  launch_gpu_job.sh  qsub_gpu_job.sh  qsub_gpu_job_fast.sh  run_wandb_agent.sh  sync_data_to_shared.sh  test_rsync_structure.sh  train_best_wb2.sh
src/genpp/sweeps/: chen_sweep.yaml  drn_sweep.yaml  emos_sweep.yaml  fm_sweep.yaml
src/genpp/sweeps/encoder_sweeps/: ae_sweep.yaml  classifierEncoder_sweep.yaml
src/genpp/sweeps/loss_fn/: chen.yaml
src/genpp/sweeps/test_multi_leadtimes/: chen_spatial_rbf_sweep.yaml  chen_spatial_sweep.yaml  chen_sweep_l.yaml  (+8 more)
tests/test_data/: __init__.py  test_batch_sizes.py  test_cache_hash.py  test_forecast_transforms.py  test_per_variable_normalization.py  test_reverse_modules.py  test_select_meta_features.py  test_spatial_normalization.py  test_utils.py
tests/test_eval/: test_icon_predict_eval.py  test_launch_permutation_importance_drn.py  test_model_entry.py  test_permutation_importance.py  test_permutation_importance_drn.py
tests/test_integration/: test_fast_weatherbench2_datamodule.py
tests/test_models/: test_layers.py  test_loss.py  test_sample_config.py
tests/test_models/test_engression/: test_engression.py
tests/test_models/test_fm/: test_cfg.py  test_fm_uvit.py
tests/test_models/test_scores/: test_energy_kernel_equivalence.py  test_loss.py  test_reshaping.py
tests/test_preproc/: test_preprocessors.py  test_transforms.py  test_utils.py
(+111 files in other folders)
