[project]
authors = [{name = "Moritz Feik", email = "uxlha@student.kit.edu"}]
name = "genpp"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.4"

[tool.pixi.pypi-dependencies]
genpp = { path = ".", editable = true }
flow_matching = ">=1.0.10,<2"

[tool.pixi.dependencies]
zarr = ">=2.18.3,<3"
gcsfs = ">=2025.5.1,<2026"
dask = ">=2025.7.0,<2026"
xarray = ">=2025.7.1,<2026"
netcdf4 = ">=1.7.2,<2"
matplotlib = ">=3.10.3,<4"
pytorch = ">=2.7.1,<3"
einops = ">=0.8.1,<0.9"
lightning = ">=2.5.2,<3"
xbatcher = ">=0.4.0,<0.5"
scipy = ">=1.7.2,<2"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"
wandb = ">=0.21.0,<0.22"
bottleneck = ">=1.5.0,<2"
polars = ">=1.35.0,<2"
seaborn = ">=0.13.2,<0.14"
hvplot = ">=0.12.1,<0.13"
torchvision = ">=0.24.0,<0.25"
xformers = ">=0.0.32.post2,<0.0.33"
jupyter_bokeh = ">=4.0.5,<5"
cfgrib = ">=0.9.15.1,<0.10"
ipykernel = ">=6.29.5,<7"
cartopy = ">=0.25.0,<0.26"
pytest = ">=8.4.1,<9"
scoringrules = ">=0.8.0,<0.9"
pre-commit = ">=4.2.0,<5"
rsync = ">=3.4.1,<4"
gh = ">=2.83.0,<3"

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = "*"
torchvision="*"
#cuda-cudart-dev_linux-64 = ">=12.9.79,<13"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"
torchvision="*"

[tool.pixi.tasks]
sync = '''rsync -avzr --progress --human-readable
  --exclude='.pixi/'
  --exclude='__pycache__/'
  --exclude='outputs/'
  --exclude='lightning_logs/'
  --exclude='wandb/'
  --exclude='.DS_Store'
  --exclude='data/weatherbench2/hres_t0.zarr/'
   . $RSYNC_USER@econ-stat-RR02.econ.kit.edu:/home/$RSYNC_USER/GenPP/'''
wandb-agent = "src/genpp/scripts/run_wandb_agent.sh"
test = "pytest"
unittest = "pytest -m unit"

[tool.pixi.environments]
default = ["default", "cpu"]
gpu = ["default", "gpu"]

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
