[project]
authors = [{name = "Moritz Feik", email = "uxlha@student.kit.edu"}]
name = "genpp"
requires-python = ">= 3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.4"

[tool.pixi.pypi-dependencies]
genpp = { path = ".", editable = true }
flow_matching = ">=1.0.10, <2"

[tool.pixi.dependencies]
zarr = ">=3.1.5,<4"
gcsfs = ">=2026.1.0,<2027"
dask = ">=2026.1.2,<2027"
xarray = ">=2026.1.0,<2027"
netcdf4 = ">=1.7.4,<2"
matplotlib = ">=3.10.8,<4"
pytorch = ">=2.8.0,<3"
einops = ">=0.8.2,<0.9"
lightning = ">=2.6.0,<3"
xbatcher = ">=0.4.0,<0.5"
scipy = ">=1.17.0,<2"
hydra-core = ">=1.3.2,<2"
omegaconf = ">=2.3.0,<3"
wandb = ">=0.24.1,<0.25"
bottleneck = ">=1.6.0,<2"
polars = ">=1.37.1,<2"
seaborn = ">=0.13.2,<0.14"
hvplot = ">=0.12.2,<0.13"
torchvision = ">=0.24.0,<0.26"
xformers = ">=0.0.32.post2,<0.0.34"
jupyter_bokeh = ">=4.0.5,<5"
cfgrib = ">=0.9.15.1,<0.10"
ipykernel = ">=7.1.0,<8"
cartopy = ">=0.25.0,<0.26"
pytest = ">=9.0.2,<10"
scoringrules = ">=0.9.0,<0.10"
pre-commit = ">=4.5.1,<5"
rsync = ">=3.4.1,<4"
gh = ">=2.86.0,<3"

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = ">=2.8.0,<3"
torchvision=">=0.24.0,<0.25"
#cuda-cudart-dev_linux-64 = ">=12.9.79,<13"

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = ">=2.9.1,<3"
torchvision=">=0.25.0,<0.26"

[tool.pixi.tasks]
sync = '''rsync -avzr --progress --human-readable
  --exclude='.pixi/'
  --exclude='__pycache__/'
  --exclude='outputs/'
  --exclude='lightning_logs/'
  --exclude='wandb/'
  --exclude='.DS_Store'
  --exclude='data/weatherbench2/hres_t0.zarr/'
   . $RSYNC_USER@econ-stat-RR02.econ.kit.edu:/home/$RSYNC_USER/GenPP/'''
wandb-agent = "src/genpp/scripts/run_wandb_agent.sh"
test = "pytest"
unittest = "pytest -m unit"

[tool.pixi.environments]
default = ["default", "cpu"]
gpu = ["default", "gpu"]

[tool.pytest.ini_options]
markers = [
    "unit: mark a test as a unit test",
    "integration: mark a test as an integration test",
]
